nothing in banner should wrap. fixes #7074

--- a/src/app/character-tile/StoreHeading.scss
+++ b/src/app/character-tile/StoreHeading.scss
@@ -7,6 +7,7 @@
   position: relative;
   height: 100%;
   height: 46px;
+  white-space: nowrap;
 
   &.vault {
     width: calc(6px + var(--character-column-width) - var(--item-margin));
